--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,6 +8,5 @@
     <% }) %>
 </ul>
 <a href="/add-post"><button>add post</button></a>
-<a href="/login"><button>login</button></a>
-<a href="/register"><button>register</button></a>
+<a href="/logout"><button>logout</button></a>
 <%-include("partials/footer.ejs") %>
