--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,9 +1,23 @@
 <%-include("partials/header.ejs") %>
+<script>
+  function togglePassword() {
+    const password = document.getElementById("password");
+    const showPassword = document.getElementById("showPassword");
+    if (showPassword.checked) {
+      password.type = "text";
+    } else {
+      password.type = "password";
+    }
+  }
+</script>
 
 <h1>Register</h1>
 <form action="/register" method="POST">
   <input type="text" name="username" placeholder="Username" />
   <input type="password" name="password" placeholder="Password" />
+  <input type="checkbox" name="showPassword" id="showPassword" onclick="togglePassword()" />
+  <label for="showPassword">Show Password</label>
+  <input type="email" name="email" placeholder="Email" />
   <button type="submit">Register</button>
 </form>
 <a href="/login">login</a>
