feat: Add user registration, validation, and post handling functionalities with new modules and a registration view.

--- a/views/register.ejs
+++ b/views/register.ejs
@@ -14,7 +14,7 @@
 <h1>Register</h1>
 <form action="/register" method="POST">
   <input type="text" name="username" placeholder="Username" />
-  <input type="password" name="password" placeholder="Password" />
+  <input type="password" name="password" placeholder="Password" id="password" />
   <input type="checkbox" name="showPassword" id="showPassword" onclick="togglePassword()" />
   <label for="showPassword">Show Password</label>
   <input type="email" name="email" placeholder="Email" />
