--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -1,4 +1,4 @@
-<%-include("header.ejs")%>
+<%-include("partials/header.ejs")%>
 <h1>admin page</h1>
 
-<%-include("footer.ejs")%>
+<%-include("partials/footer.ejs")%>
