--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,7 +1,8 @@
 </main>
-
-<footer>
-<p>Copyright © <%= new Date().getFullYear() %> </p>  
+<footer class="site-footer">
+    <div class="container">
+        <p>Copyright © <%= new Date().getFullYear() %> NodeBlog. All rights reserved.</p>
+    </div>
 </footer>
 </body>
 
